project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kflask-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kflask
  template:
    metadata:
      labels:
        app: kflask
    spec:
      volumes:
        - name: shared-images
          persistentVolumeClaim:
            claimName: main-claim
      containers:
        - name: kflask
          image: kriegmachine/kflask
          volumeMounts:
            - name: shared-images
              mountPath: /images/
