project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kflask-svc
spec:
  type: ClusterIP
  selector:
    app: kflask # This is the app as declared in the deployment.
  ports:
    - protocol: TCP
      port: 2345 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 5000 # This is the target port
